Fix scrollbar color

--- a/shared/global.css
+++ b/shared/global.css
@@ -5,6 +5,7 @@
 @custom-variant window-inactive (&:is(body.window-inactive *));
 
 :root {
+  color-scheme: light;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
   --card: oklch(97.91% 0 89.9);
@@ -41,6 +42,7 @@
 }
 
 .dark {
+  color-scheme: dark;
   --background: oklch(25.99% 0.01 346.2);
   --foreground: oklch(0.985 0 0);
   --card: oklch(29.7% 0.01 337.6);
